WIP: アプリをデプロイ、eas の設定が必要

--- a/app.json
+++ b/app.json
@@ -23,6 +23,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "db2f0902-268d-473a-8b42-ca40edc285d9"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/db2f0902-268d-473a-8b42-ca40edc285d9"
     }
   }
 }
