eas.json の設定を見直し

--- a/eas.json
+++ b/eas.json
@@ -1,10 +1,9 @@
 {
     "build": {
-      "production": {
-      },
       "web": {
-        "cache": true
+        "cache": {}
       }
     }
-  }
+}
+  
   
